--- a/src/estilos/SearchBar.css
+++ b/src/estilos/SearchBar.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     flex-wrap:wrap ;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 
@@ -13,12 +14,12 @@
     background-color: #0009;
     border-radius: 50px;
     padding: 20px;
-    transition: all .25s;
+    transition: transform .25s,box-shadow .25s;
 }
 
 
 .contenedorCardsProducts:hover{
-    transform: translateY(-3px);
+    transform: translateY(-15px);
     box-shadow: 10px 0 30px #ddd8;
 }
 
